<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_event_layout"
    android:padding="10dp">


    <TextView
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:paddingStart="30dp"
        android:paddingEnd="0dp"
        android:text="@string/event_title"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/addNewEventLayout"
        android:textSize="28sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/event_date"
        android:textAlignment="textStart"
        android:textColor="@color/eventInfo"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintStart_toStartOf="@id/event_title"
        app:layout_constraintTop_toBottomOf="@+id/event_title" />

    <TextView
        android:id="@+id/event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/event_time"
        android:textAlignment="textStart"
        android:textColor="@color/eventInfo"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/event_budget"
        app:layout_constraintStart_toEndOf="@+id/event_date"
        app:layout_constraintTop_toBottomOf="@+id/event_title" />

    <TextView
        android:id="@+id/event_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/event_budget"
        android:textAlignment="textStart"
        android:textColor="@color/eventInfo"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/event_title"
        app:layout_constraintTop_toBottomOf="@+id/event_title" />

    <ImageView
        android:id="@+id/bulletIcon"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/imageContent"
        app:layout_constraintStart_toStartOf="@+id/event_title"
        app:layout_constraintTop_toTopOf="@+id/event_title"
        app:srcCompat="@drawable/ic_baseline_brightness_1_24" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:contentDescription="@string/imageContent"
        app:layout_constraintBottom_toBottomOf="@+id/event_date"
        app:layout_constraintEnd_toStartOf="@+id/event_date"
        app:layout_constraintTop_toTopOf="@+id/event_date"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24_dark" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:contentDescription="@string/imageContent"
        app:layout_constraintBottom_toBottomOf="@+id/event_time"
        app:layout_constraintEnd_toStartOf="@+id/event_time"
        app:layout_constraintTop_toTopOf="@+id/event_time"
        app:srcCompat="@drawable/ic_baseline_access_time_24_dark" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/imageContent"
        app:layout_constraintBottom_toBottomOf="@+id/event_budget"
        app:layout_constraintEnd_toStartOf="@+id/event_budget"
        app:layout_constraintTop_toTopOf="@+id/event_budget"
        app:srcCompat="@drawable/ic_baseline_attach_money_24_dark" />

    <ImageView
        android:id="@+id/deleteIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/imageContent"
        app:layout_constraintEnd_toEndOf="@+id/event_title"
        app:layout_constraintTop_toTopOf="@+id/event_title"
        app:srcCompat="@drawable/ic_baseline_delete_24" />


</androidx.constraintlayout.widget.ConstraintLayout>